--- a/sender-button/platformio.ini
+++ b/sender-button/platformio.ini
@@ -16,6 +16,7 @@
 #
 # Automatic targets - enable auto-uploading
 # targets = upload
+[platformio]
 lib_dir = ~/.repositories/platformio-libs
 
 [env:uno]
