general run script; lib path

--- a/receiver-signaler/platformio.ini
+++ b/receiver-signaler/platformio.ini
@@ -16,6 +16,8 @@
 #
 # Automatic targets - enable auto-uploading
 # targets = upload
+[platformio]
+lib_dir = ~/.repositories/platformio-libs
 
 [env:uno]
 platform = atmelavr
